add second submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Assets/Submodules/Fork01"]
 	path = Assets/Submodules/Fork01
 	url = https://github.com/dack91/ForkTest
+[submodule "Assets/Submodules/Fork02"]
+	path = Assets/Submodules/Fork02
+	url = https://github.com/dack91/OriginTest
